@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class ApplicationSession
{
    + static getInstance()
    + getCurrentSession()
}

class UserSession
{
    + getUserEmail()
}

class VehicleFleetManager {
  - String name
  - String email
  - String phone
}

class Vehicle {
  - String brand
  - String model
  - String type
  - Double tareWeight
  - Double grossWeight
  - Int currentKm
  - LocalDate registerDate
  - LocalDate acquisitionDate
  - Int maintenanceFrequency
  - String plateName
  - LocalDate lastMaintenanceDate
}

class Organization {
  - String name
  - String vatNumber
  - String address
  - String phone
  - String email
  - List<Vehicle> vehicles
  - Map<Vehicle, List<Maintenance>> maintenanceRecords
  + addVehicle(Vehicle vehicle)
  + addMaintenance(Vehicle vehicle, Maintenance maintenance)
  + List<Maintenance> getVehicleMaintenanceRecords(Vehicle vehicle)
}

class VehicleRepository {
  - List<Vehicle> vehicles
  + Vehicle getVehiclebyPlateNumber(String plateNumber)
  + Optional<Vehicle> add(Vehicle vehicle)
  + boolean validateVehicle(Vehicle vehicle)
  + List<Vehicle> getVehicles()
}

class OrganizationRepository {
  + boolean save(Organization organization)
  + Organization findByName(String name)
  + Organization findByVatNumber(String vatNumber)
}

class Repositories {
  + getInstance() : Repositories
  + getVehicleRepository() : VehicleRepository
  + getOrganizationRepository() : OrganizationRepository
}

class ProduceMaintenanceListController {
    + VehicleRepository getVehicleRepository()
    + List<Vehicle> getVehicles()
}

note right of CreateTaskController
    - userEmail is obtained
    from the user session
    - categoryDescription
    is retrieved from selected data
end note

note bottom of TaskCategoryRepository
    - used for displaying
    the category list
end note

class CreateTaskUI {
}

Repositories -> Repositories : instance
ApplicationSession -> ApplicationSession : instance

CreateTaskUI .> CreateTaskController

CreateTaskController .> Repositories : repositories

Repositories -> "1" TaskCategoryRepository

CreateTaskController ..> TaskCategory
CreateTaskController ..> OrganizationRepository : organizationRepository
CreateTaskController ..> TaskCategoryRepository : TaskCategoryRepository

Repositories --> "1" OrganizationRepository

OrganizationRepository --> "*" Organization
ApplicationSession --> "1" UserSession : userSession

CreateTaskController ..> "1" Organization : organization
CreateTaskController ..> ApplicationSession
CreateTaskController ..> UserSession
Task "*" --> "1" TaskCategory : taskCategory
TaskCategoryRepository "1" --> "*" TaskCategory : taskCategory
Organization "1" --> "*" Task : tasks
Task --> VFM : createdBy

Organization --> "*" VFM : employs

@enduml